fixes and features. More below
- adds options prop to render select
- adds append/prepend to render something in front or after the input
- adds showAll prop to table to allow auto height of table (it just renders all the rows)
- fix shadow rendering
- fix jiggling of fixed left rows and render bug by disabling border-collapse
- fix docs styling

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "vite": "^2.9.13",
     "vite-plugin-dts": "^1.2.0",
     "vitepress": "^1.0.0-alpha.4",
-    "vue-tsc": "^0.38.2"
+    "vue-tsc": "^0.38.2",
+    "postcss":"^8.4.14",
+    "postcss-prefix-selector":"^1.16.0"
   },
   "license": "MIT"
 }
