--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fuzzy-ui",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "main": "src/index.ts",
   "scripts": {
     "dev": "vite",
@@ -12,31 +12,31 @@
     "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "vue": "^3.2.39"
   },
   "sideEffects": false,
   "devDependencies": {
-    "@iconify-json/carbon": "^1.1.6",
-    "@iconify-json/heroicons-solid": "^1.1.2",
-    "@types/node": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "eslint": "^8.20.0",
+    "@iconify-json/carbon": "^1.1.8",
+    "@iconify-json/heroicons-solid": "^1.1.5",
+    "@types/node": "^18.7.18",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@vitejs/plugin-vue": "^3.1.0",
+    "@vue/eslint-config-typescript": "^11.0.1",
+    "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
-    "eslint-plugin-vue": "^9.2.0",
+    "eslint-plugin-vue": "^9.5.1",
+    "postcss": "^8.4.16",
+    "postcss-prefix-selector": "^1.16.0",
     "prettier": "^2.7.1",
-    "typescript": "^4.7.4",
-    "unplugin-icons": "^0.14.7",
-    "unplugin-vue-components": "^0.21.1",
-    "vite": "^3.0.2",
-    "vite-plugin-dts": "^1.3.1",
-    "vitepress": "^1.0.0-alpha.4",
-    "vue-tsc": "^0.38.8",
-    "postcss":"^8.4.14",
-    "postcss-prefix-selector":"^1.16.0"
+    "typescript": "^4.8.3",
+    "unplugin-icons": "^0.14.10",
+    "unplugin-vue-components": "^0.22.7",
+    "vite": "^3.1.2",
+    "vite-plugin-dts": "^1.5.0",
+    "vitepress": "^1.0.0-alpha.15",
+    "vue-tsc": "^0.40.13"
   },
   "license": "MIT"
 }
